Updates from Overleaf

--- a/example.bib
+++ b/example.bib
@@ -1,22 +1,20 @@
-
 @article{cloudchamber,
 	Author = {C. D. Anderson and S. H. Neddermeyer},
-	Journal = {Phys. Rev. 50 (1936) 263–271},
+	Journal = {Phys. Rev. 50 (1936) 263--271},
 	Title = {Cloud Chamber Observations of Cosmic Rays at 4300 Meters Elevation and Near Sea-Level}}
 
 @article{electronmagmom,
-	Author = {D. Hanneke, S. Fogwell, and G. Gabrielse},
+	Author = {D. Hanneke, S. Fogwell and G. Gabrielse},
 	Journal = {Phys. Rev. Lett. 100 (2008) 12080},
 	Title = {New Measurement of the Electron Magnetic Moment and the Fine Structure Constant}}
 
 @article{Reference1,
-	Author = {J. P. Miller, E. de Rafael, and B. L. Roberts},
+	Author = {J. P. Miller, E. de Rafael and B. L. Roberts},
 	Journal = {Reports on Progress in Physics 70},
-	Title = {Muon (g − 2): Experiment and Theory},
+	Title = {Muon $g-2$: Experiment and Theory},
 	Year = {2007}}
 	
 @article{Reference2,
-	Author = {},
 	Journal = {Proceedings of the Royal Society of London A: Mathematical, Physical and Engineering Sciences},
 	Numpages = {117(778):610–624},
 	Title = {The quantum theory of the electron.},
@@ -35,7 +33,6 @@
 @article{Reference5,
 	Author = {Luis W. Alvarez and F. Bloch},
 	Journal = {Phys. Rev. 57, 111},
-	Title = {},
 	Year = {1940}}
 
 @article{Reference6,
@@ -48,13 +45,13 @@
 	Author = {Julian Schwinger.},
 	Journal = {Phys. Rev. 73},
 	Month = {February},
-	Pages = {416–417},
+	Pages = {416--417},
 	Title = {On quantum-electrodynamics and the magnetic moment of the electron},
 	Year = {1948}}
 
 @article{QED,
 	Author = {Prateek Agrawal},
-	Title = {(g-2) in QED and beyond}}
+	Title = {$g-2$ in QED and beyond}}
 
 @article{Reference8,
 	Author = {T.D. Lee, C.N. Yang},
@@ -62,54 +59,53 @@
 	Year = {1956}}
 
 @article{Reference9,
-	Author = {C.S. Wu, E. Ambler, R.W. Hayward, D.D. Hoppes, R.P. Hudson},
+	Author = {C.S. Wu {\it et al.}},
 	Journal = {Phys. Rev. 105 1413},
 	Year = {1957}}
 
 @article{Reference10,
-	Author = {F.J.M. Farleya and Y.K. Semertzidisb},
+	Author = {F.J.M. Farley and Y.K. Semertzidis},
 	Journal = {Progress in Particle and Nuclear Physics},
-	Title = {The 47 years of muon g − 2},
+	Title = {The 47 years of muon $g-2$},
 	Year = {2004}}
 	
 @article{Reference11,
-	Title = {EUROPEAN ORGANIZATION FOR NUCLEAR RESEARCH. Annual report 1959, dec 1959.}}
+	Title = {EUROPEAN ORGANIZATION FOR NUCLEAR RESEARCH. Annual report 1959, Dec 1959.}}
 
 @article{Reference12,
-	Author = {F Combley, F.J.M Farley, and E Picasso.},
-	Journal = {Physics Reports, 68(2):93 – 119,},
-	Title = {The cern muon (g-2) experiments.},
+	Author = {F Combley, F.J.M Farley and E Picasso},
+	Journal = {Physics Reports, 68(2):93--119,},
+	Title = {The CERN muon (g-2) experiments.},
 	Year = {1981.}}
 
 @article{Reference13,
-	Author = {G. W. Bennett, B. Bousquet et al.},
+	Author = {G. W. Bennett, B. Bousquet {\it et al.}},
 	Journal = {Phys. Rev. D, 73:072003},
 	Month = {April},
-	Title = {Final report of the e821 muon anomalous magnetic moment measurement at bnl},
+	Title = {Final report of the E821 muon anomalous magnetic moment measurement at BNL},
 	Year = {2006}}
 
 @article{Reference14,
 	Author = {F Cobley and Emilio Picasso},
-	Journal = {Phys. Rep., 14:1–58,},
+	Journal = {Phys. Rep., 14, 1--58,},
 	Title = {F Combley and Emilio Picasso. The muon (g-2) precession experiments; past, present and future.},
 	Year = {1974.}}
 
 %% QED %%
 
 @article{Reference15,
-	Author = {A. Hoecker, W.J. Marciano },
-	Month = {August},
-	Title = {THE MUON ANOMALOUS MAGNETIC MOMENT},
+	Author = {A. Hoecker, W.J. Marciano},
+	Title = {The Muon Anomalous Magnetic Moment},
 	Year = {2013}}
 
 @article{Reference16,
-	Author = {T. Aoyama, M. Hayakawa, T. Kinoshita, and M. Nio},
-    Journal = {Phys. Rev. Lett. 109},
-	Title = {Tenth-Order QED Contribution to the Electron g-2 and an Improved Value of the Fine Structure Constant},
+	Author = {T. Aoyama {\it et al.}},
+    Journal = {Phys. Rev. Lett. 109, 111808},
+	Title = {Complete Tenth-Order QED Contribution to the Muon $g-2$},
 	Year = {2012}}
 
 @article{Reference17,
-	Author = { T. Aoyama, T. Kinoshita, and M. Nio},
+	Author = {T. Aoyama, T. Kinoshita and M. Nio},
 	Journal = {Phys. Rev. D 97 036001},
 	Title = {Revised and improved value of the QED tenth-order electron anomalous magnetic moment},
 	Year = {2018}}	
@@ -118,15 +114,15 @@
 
 %% EW %%
 @article{Reference18,
-	Author = {J. Grange et al.},
+	Author = {J. Grange {\it et al.}},
 	Title = {E989 Muon g-2 Collaboration},
 	Url = {arXiv:1501.06858},
 	Year = {2015}}
 
 @article{Reference19,
-	Author = {C. Gnendiger, D. Stöckinger, and H. Stöckinger-Kim},
+	Author = {C. Gnendiger, D. St{\"o}ckinger and H. St{\"o}ckinger-Kim},
 	Journal = {Phys. Rev. D 88},
-	Title = {The electroweak contributions to muon g-2 after the Higgs-boson mass measurement},
+	Title = {The electroweak contributions to muon $g-2$ after the Higgs-boson mass measurement},
 	Year = {2013}}
 
 %% END EW %%
@@ -134,23 +130,20 @@
 %% HAD %%
 
 @article{Reference20,
-	Author = { F. Jegerlehner},
-	Journal = {Springer Tracts
-in Modern Physics (Springer, 2008).},
-	Title = {The Anomalous Magnetic Moment of the Muon},
-	Year = {}}
+	Author = {F. Jegerlehner},
+	Journal = {Springer Tracts in Modern Physics (Springer, 2008).},
+	Title = {The Anomalous Magnetic Moment of the Muon}}
 
 @article{Reference21,
 	Author = {Antoine Chapelain},
-	Journal = {12th Quark Confinement & the Hadron Spectrum},
+	Journal = {12th Quark Confinement \& the Hadron Spectrum},
 	Title = {The Muon g-2 experiment at Fermilab},
 	Year = {2017}}
 
 @article{Reference22,
-	Author = {A. Keshavarzi, D. Nomura, and T. Teubner},
-	Title = {The muon g-2 and $\alpha(M^2_Z )$: a new data-based analysis},
-	Url = {arXiv:1802.02995 [hep-ph].},
-	Year = {}}
+	Author = {A. Keshavarzi, D. Nomura and T. Teubner},
+	Title = {The muon $g-2$and $\alpha(M_Z^2)$ : a new data-based analysis},
+	Url = {arXiv:1802.02995 [hep-ph].}}
 
 @article{Reference23,
 	Author = {K. Melnikov and A. Vainshtein},
@@ -160,241 +153,227 @@ moment reexamined},
 	Year = {2004}}
 	
 @article{Reference24,
-	Author = {Joaquim Prades, Eduardo de Rafael, and Arkady Vainshtein},
-	Journal = { Adv. Ser. Direct. High Energy Phys.},
-	Numpages = {20:303–317},
+	Author = {J. Prades, E, de Rafael and A. Vainshtein},
+	Journal = {Adv. Ser. Direct. High Energy Phys.},
+	Numpages = {20: 30--317},
 	Title = {The Hadronic Light-by-Light Scattering Contribution to the Muon and Electron Anomalous Magnetic Moments},
 	Url = {arXiv:1802.02995 [hep-ph].},
 	Year = {2009}}
 	
 	
 @article{Reference25,
-	Author = {J. Prades, E. de Rafael, and A. Vainshtein},
-	Title = {The Hadronic Light-by-Light Scattering Contribution to the Muon and Electron Anomalous Magnetic Moments, (World Scientific, 2011).},
-	Year = {}}
+	Author = {J. Prades, E. de Rafael and A. Vainshtein},
+	Title = {The Hadronic Light-by-Light Scattering Contribution to the Muon and Electron Anomalous Magnetic Moments, (World Scientific, 2011).}}
 	
-@article{DispersionRel,
-	Author = {J. P. Miller, E. de Rafael and B. L. Roberts, Rept. Prog. Phys. 70 (2007) 795.}}	
-%% end had %%
-
 @article{Reference26,
-	Author = {Alexander Keshavarzi, Daisuke Nomura and Thomas Teubner},
+	Author = {A. Keshavarzi, D. Nomura and T. Teubner},
 	Journal = {PHYSICAL REVIEW D 97, 114025},
-	Title = {Muon g − 2 and $M_{Z}{^2}$: A new data-based analysis},
+	Title = {Muon $g-2$ and $\alpha(M_Z^2)$ : A new data-based analysis},
 	Year = {2018}}
 
 @article{Reference27,
-	Author = {James P. Miller, Eduardo de Rafael, B. Lee Roberts and Dominik Stockinger},
-	Journal = {Annu. Rev. Nucl. Part. Sci. 2012. 62:237–64},
-	Title = {Muon (g − 2): Experiment and Theory},
+	Author = {James P. Miller, Eduardo de Rafael, B. Lee Roberts and Dominik St{\"o}ckinger},
+	Journal = {Annu. Rev. Nucl. Part. Sci. 2012. 62, 237--64},
+	Title = {Muon $g-2$: Experiment and Theory},
 	Year = {2012}}
 
 @article{Reference28,
-	Author = {F.J.M. Farleya and Y.K. Semertzidisb},
+	Author = {F. Farley and Y. Semertzidis},
 	Journal = {Progress in Particle and Nuclear Physics},
-	Title = {The 47 years of muon g − 2},
+	Title = {The 47 years of muon $g-2$},
 	Year = {2004}}
 
 @article{Reference29,
-	Author = {J. Grange et al.},
+	Author = {J. Grange {\it et al.}},
 	Month = {June},
 	Title = {Muon g-2 Technical Design Report},
 	Url = {arXiv:1501.06858},
 	Year = {2015}}
 	
-	@article{Reference30,
-	Author = {B. Lee Roberts},
-	Journal = {J.Phys.Conf.Ser.295:012027,2011},
-	Title = {Searching for physics beyond the Standard Model through the dipole interaction},
-	Year = {}}	
+@article{Reference30,
+Author = {B. Lee Roberts},
+Journal = {J.Phys.Conf.Ser.295:012027,2011},
+Title = {Searching for physics beyond the Standard Model through the dipole interaction}}	
 	
-	@article{Reference31,
-	Author = {Dominik Stöckinger},
-	Journal = {J.Phys.G34:R45-R92,2007},
-	Title = {The Muon Magnetic Moment and Supersymmetry},
-	Year = {}}	
-
+@article{Reference31,
+Author = {Dominik St{\"o}ckinger},
+Journal = {J.Phys.G34:R45-R92,2007},
+Title = {The Muon Magnetic Moment and Supersymmetry}}	
 @article{Reference32,
-	Author = {Andrzej Czarnecki and William J. Marciano.},
-	Title = {The anomalous magnetic moment: A harbinger for “new physics”},
-	Year = {}}	
+Author = {A. Czarnecki and W.J. Marciano},
+Title = {The anomalous magnetic moment: A harbinger for "new physics"}}	
 	
 %%% Chapter 2 %%%
 
 @article{Chap2Ref1,
-	Author = {J. L. Holzbauer},
-	Journal = {The 19th International Workshop on Neutrinos from Accelerators},
-	Month = {December},
-	Title = {The Muon g-2 Experiment Overview and Status},
-	Url = {arXiv:1712.05980v1},
-	Year = {2017}}	
+Author = {J. L. Holzbauer},
+Journal = {The 19th International Workshop on Neutrinos from Accelerators},
+Month = {December},
+Title = {The Muon $g-2$ Experiment Overview and Status},
+Url = {arXiv:1712.05980v1},
+Year = {2017}}	
 	
 @article{Chap2Ref2,
-	Author = {L. H. Thomas},
-	Journal = {Nature 117},
-	Year = {1926}}		
+Author = {L. H. Thomas},
+Journal = {Nature 117},
+Year = {1926}}		
 	
 %%%% CHAPTER 3 %%%%
 
 @article{injectref1,
-	Author = {D. W. Hertzog.},
-	Title = {Next Generation Muon g - 2 Experiments.},
-	Year = {}}		
-
+Author = {D. W. Hertzog},
+Title = {Next Generation Muon $g-2$ Experiments.}}		
 @article{injectref3,
-	Author = {D. Stratakis, M. E. Convery, C. Johnstone, J. Johnstone, J. P. Morgan, M. J. Syphers, J. D. Crmkovic, W. M. Morse, V. Tishchenko, N. S. Froemming, and M. Korostelev.},
-	Journal = {ArXiv e-prints},
-	Month = {July},
-	Title = {Performance analysis for the new G-2 experiment},
-	Year = {2016}}		
+Author = {D. Stratakis {\it el al.}},
+Journal = {ArXiv e-prints},
+Month = {July},
+Title = {Performance analysis for the new g-2 experiment},
+Year = {2016}}		
 	
 @article{magref2,
-	Author = {},
-	Journal = {Phys. Rev. D, 73:072003},
-	Month = {April},
-	Title = {Final report of the e821 muon anomalous magnetic moment measurement at bnl.},
-	Year = {2006}}		
+Journal = {Phys. Rev. D, 73:072003},
+Month = {April},
+Title = {Final report of the E821 muon anomalous magnetic moment measurement at BNL.},
+Year = {2006}}		
 
 @article{magref3,
-	Abstract = {},
-	Author = {G. T. Danby et al.},
-	Journal = {Nucl. Instrum. Meth. A457},
-	Year = {2001.}}	
+Author = {G. T. Danby {\it et al.}},
+Journal = {Nucl. Instrum. Meth. A457},
+Year = {2001.}}	
 	
 @article{magref4,
-	Author = {David Flay.},
-	Journal = {PoS, ICHEP2016:1075},
-	Title = {Precision Magnetic Field Calibration for the Muon g−2 Experiment
+Author = {D. Flay},
+Journal = {PoS, ICHEP2016:1075},
+Title = {Precision Magnetic Field Calibration for the Muon $g-2$ Experiment
 at Fermilab.},
-	Year = {2017.}}		
+Year = {2017.}}		
 	
-@article{magref5-35onpdf,
-	Author = {M. Farooq, T. Chupp, and Muon g-2 Collaboration Collaboration.},
-	Journal = {APS April Meeting Abstracts, page F1.036},
-	Month = {January},
-	Title = {Absolute Calibration of the Magnetic Field Measurement for Muon g-2.},
-	Year = {2017.}}		
+@article{magref5,
+Author = {M. Farooq},
+Journal = {APS April Meeting Abstracts, page F1.036},
+Month = {January},
+Title = {Absolute Calibration of the Magnetic Field Measurement for Muon g-2.},
+Year = {2017}}		
 	
-@article{nmrref1-33onpdf,
-	Author = {R. Prigl, U. Haeberlenb, K. Jungmann, G. zu Putlitz, P. von Walter},
-	Journal = {NUCLEAR INSTRUMENTS & METHOOS IN PHYSICS RESEARCH Section A},
-	Month = {December},
-	Title = {A high precision magnetometer based on pulsed NMR},
-	Year = {1995}}
+@article{nmrref1,
+Author = {R. Prigl {\it et al.}},
+Journal = {NUCLEAR INSTRUMENTS & METHODS IN PHYSICS RESEARCH Section A},
+Month = {December},
+Title = {A high precision magnetometer based on pulsed NMR},
+Year = {1995}}
 
 @article{calref1,
-	Author = {J. Kaspar et al.},
-	Journal = {JINST, 12(01):P01009},
-	Title = {Design and performance of SiPM-based readout of PbF2 crystals for high-rate, precision timing applications.},
-	Year = {2017.}}		
+Author = {J. Kaspar {\it et al.}},
+Journal = {JINST, 12(01):P01009},
+Title = {Design and performance of SiPM-based readout of PbF$_2$ crystals for high-rate, precision timing applications.},
+Year = {2017}}		
 	
 @article{calref2,
-	Author = {A. Anastasi et al},
-	Journal = {Nucl. Instrum. Meth. A788},
-	Year = {2015.}}	
+Author = {A. Anastasi et al},
+Journal = {Nucl. Instrum. Meth. A788},
+Year = {2015}}	
 
 @article{calref3,
-	Title = {The calorimeter system of the new muon g-2 experiment at Fermilab},
-	Year = {2015}}	
+Title = {The calorimeter system of the new muon $g-2$ experiment at Fermilab},
+Year = {2015}}	
 
 @article{fiberref1,
-	Author = {B. Martinez, E. Diamond, A. Sblendorio, and F. Gray.},
-	Journal = {In APS Division of Nuclear Physics Meeting Abstracts, page EA.098},
-	Month = {September},
-	Title = {Development and Testing of Scintillating Detectors for the Muon g-2 Experiment.},
-	Year = {2016}}	
+Author = {B. Martinez {\it el al.}},
+Journal = {In APS Division of Nuclear Physics Meeting Abstracts, page EA.098},
+Month = {September},
+Title = {Development and Testing of Scintillating Detectors for the Muon $g-2$ Experiment.},
+Year = {2016}}	
 	
-	@article{ibmsref1,
-	Author = {Andrzej Czarnecki and William J. Marciano.},
-	Title = {Muon anomalous magnetic moment: A harbinger for “new physics”},
-	Year = {}}	
+@article{ibmsref1,
+Author = {A. Czarnecki and W. J. Marciano},
+Title = {Muon anomalous magnetic moment: A harbinger for "new physics"}}	
 	
 @article{ibmsref2,
-	Author = {Wendy Collins},
-	Journal = {Phys. Rev. D, 64:013014, Jun 2001},
-	Month = {August},
-	Title = {Building IBMS Detectors for Muon g-2},
-	Year = {2016}}		
+Author = {Wendy Collins},
+Journal = {Phys. Rev. D, 64:013014, Jun 2001},
+Month = {August},
+Title = {Building IBMS Detectors for Muon $g-2$},
+Year = {2016}}		
+
 %%chapter 4	
 @article{driftchamber,
-	Author = {W. Blum et al.},
-	Journal = {Springer-Verlag Berlin Heidelberg},
-	Month = {August},
-	Title = {Particle Detection with Drift Chambers},
-	Year = {2008}}		
+Author = {W. Blum {\it et al.}},
+Journal = {Springer-Verlag Berlin Heidelberg},
+Month = {August},
+Title = {Particle Detection with Drift Chambers},
+Year = {2008}}		
 
 @article{geanefitting,
-	Author = {Nicholas Kinnaird.},
-	Journal = {G Minus 2 Experiment Document 8102-v3.},
-	Month = {August},
-	Title = {Geane track fitting. g-2 Note},
-	Year = {2017}}		
+Author = {Nicholas Kinnaird},
+Journal = {G Minus 2 Experiment Document 8102-v3.},
+Month = {August},
+Title = {Geane track fitting. g-2 Note},
+Year = {2017}}		
 
 @article{geane,
-	Author = {E. Nagy V. Innocente M. Maire.},
-	Month = {January},
-	Title = {GEANE: Average Tracking and Error Propagation Package.},
-	Year = {1994}}
+Author = {E. Nagy V. Innocente and M. Maire},
+Month = {January},
+Title = {GEANE: Average Tracking and Error Propagation Package},
+Year = {1994}}
 
- @article{rungekutta1,
-	Author = {E. Nyström},
-	Title = {GÜber die numerische integration von differentialgleichungen. HELSINGFORS},
-	Year = {1925}}		
+@article{rungekutta1,
+Author = {E. Nystr{\"o}m},
+Title = {G{\"u}ber die numerische integration von differentialgleichungen. HELSINGFORS},
+Year = {1925}}		
 
 @article{rungekutta2,
-	Author = {E. Lund, L. Bugge, I. Gavrilenko, and A. Strandlie},
-	Journal = {Journal of Instrumentation 4 no. 04},
-	Title = {Track parameter propagation through the application of a new adaptive Runge-Kutta-Nyström method in the ATLAS experiment},
-	Year = {2009}}		
+Author = {E. Lund, L. Bugge, I. Gavrilenko and A. Strandlie},
+Journal = {Journal of Instrumentation 4 no. 04},
+Title = {Track parameter propagation through the application of a new adaptive Runge-Kutta-Nystr{\"o}m method in the ATLAS experiment},
+Year = {2009}}		
 
 @article{analogtodigital,
-	Author = {Thomas Simon Stuttard},
-	Journal = {Doctoral thesis},
-	Month = {December},
-	Title = {The development, testing and characterisation of a straw tracking detector and readout system for the Fermilab muon g-2 experiment},
-	Year = {2017}}	
+Author = {T. Stuttard},
+Journal = {Doctoral thesis},
+Month = {December},
+Title = {The development, testing and characterisation of a straw tracking detector and readout system for the Fermilab muon $g-2$ experiment},
+Year = {2017}}	
 	
 @article{silverepoxy,
-	Title = {Silver epoxy TraDuct 2902},
-	Url = {https://bondlab-qa.web.cern.ch/bondlab-qa/glues/data-sheets/tra-con_tra-duct-2902.pdf},
-	Year = {2002}}		
+Title = {Silver epoxy TraDuct 2902},
+Url = {https://bondlab-qa.web.cern.ch/bondlab-qa/glues/data-sheets/tra-con_tra-duct-2902.pdf},
+Year = {2002}}		
 
 @article{metrosoft,
-	Title = {Metrosoft Quartis},
-	Url = {https://www.metromec.ch/images/pdf/quartis/Metrosoft_QUARTIS_EN.pdf}}
+Title = {Metrosoft Quartis},
+Url = {https://www.metromec.ch/images/pdf/quartis/Metrosoft_QUARTIS_EN.pdf}}
 
 @article{LloydPlus,
-	Title = {Lloyd LRX Plus materials tester},
-	Url = {http://www.jlwinstruments.com/index.php/products/products-library/lrx-series-materials-testing-machine/}}	
+Title = {Lloyd LRX Plus materials tester},
+Url = {http://www.jlwinstruments.com/index.php/products/products-library/lrx-series-materials-testing-machine/}}	
 	
 @article{Extensionometer,
-	Title = {Epsilon Extensionometer},
-	Url = {https://www.ametektest.com/-/media/ametektest/download_links/epsilon_extensometer_catalogue.pdf?la=en}}	
+Title = {Epsilon Extensionometer},
+Url = {https://www.ametektest.com/-/media/ametektest/download_links/epsilon_extensometer_catalogue.pdf?la=en}}
 	
 @article{CAEN,
-	Title = {CAEN SY127 crate},
-	Url = {http://www.tunl.duke.edu/documents/public/electronics/CAEN/caen_sy127.pdf}}
-	
+Title = {CAEN SY127},
+Url = {http://www.tunl.duke.edu/documents/public/electronics/CAEN/caen_sy127.pdf}}
 
 % chapter 6
 
- @article{muonloss1,
-	Author = {J. D. Crnkovic, D. W. Hertzog, W. M. Morse and D. Stratakis},
-	Month = {June},
-	Title = {Muon g-2 storage ring beam and spin dynamics},
-	Year = {2019}}		
+@article{muonloss1,
+Author = {J. Crnkovic {\it et al.}},
+Month = {June},
+Title = {Muon $g-2$ storage ring beam and spin dynamics},
+Year = {2019}}		
 
 @article{muonloss2,
-	Author = {Sudeshna Ganguly, J. D. Crnkovic and D. Stratakis},
-    Journal = {Proceedings of IPAC2017},
-	Title = {Lost muon study for the muon g-2 experiment at fermilab},
-	Year = {2017}}
+Author = {S. Ganguly {\it et al.}},
+Journal = {Proceedings of IPAC2017},
+Title = {Lost muon study for the muon $g-2$ experiment at fermilab},
+Year = {2017}}
 
 @article{FR2,
-	Author = {D. L. Rubin, A. Chapelain, F. Gray, J. Price, S. Charity, J. Mott, J. D. Crnkovic, W. Morse and V. Tishchenko},
-    Journal = {g-2 internal note},
-	Title = {Muon beam dynamics and spin dynamics in the g-2 storage ring},
-	Year = {2018}}
+Author = {D. L. Rubin {\it et al.}},
+Journal = {$g-2$ internal note},
+Title = {Muon beam dynamics and spin dynamics in the $g-2$ storage ring},
+Year = {2018}}
 
 
 	
