--- a/main.tex
+++ b/main.tex
@@ -1,38 +1,27 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%----------------------------------------------------------------------------------------
-%	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
-%----------------------------------------------------------------------
-
-
 % Line spacing, alternatives: onehalfspacing or doublespacing, singlespacing
 % The default document font size, options: 10pt, 11pt, 12pt
-%oneside, % Two side (alternating margins) for binding by default, uncomment to switch to one side
-%liststotoc, % Uncomment to add the list of figures/tables/etc to the table of contents
-%toctotoc, % Uncomment to add the main table of contents to the table of contents
-%parskip, % Uncomment to add space between paragraphs
-%nohyperref, % Uncomment to not load the hyperref package
-% Uncomment to get a line under the header
-%chapterinoneline, % Uncomment to place the chapter title next to the number on one line
-%consistentlayout, % Uncomment to change the layout of the declaration, abstract and acknowledgements pages to match the default layout
+% oneside, % Two side (alternating margins) for binding by default, uncomment to switch to one side
+% liststotoc, % Uncomment to add the list of figures/tables/etc to the table of contents
+% toctotoc, % Uncomment to add the main table of contents to the table of contents
+% parskip, % Uncomment to add space between paragraphs
+% nohyperref, % Uncomment to not load the hyperref package
+% chapterinoneline, % Uncomment to place the chapter title next to the number on one line
+% consistentlayout, % Uncomment to change the layout of the declaration, abstract and acknowledgements pages to match the default layout
 
-\documentclass[11pt, twoside, english, doublespacing, nolistspacing, headsepline]{MastersDoctoralThesis} 
+\documentclass[11pt, twoside, english, doublespacing, nolistspacing, headsepline, nohyperref]{MastersDoctoralThesis} 
 
-\usepackage[utf8]{inputenc} % Required for inputting international characters
-\usepackage[T1]{fontenc} % Output font encoding for international characters
-
-%\usepackage{mathpazo} % Use the Palatino font by default
-
+\usepackage[T1]{fontenc} % Output font encoding for
+\usepackage[utf8]{inputenc}
+\usepackage{csquotes}
 \usepackage[style=numeric,sorting=none]{biblatex}
 \addbibresource{example.bib} % The filename of the bibliography
-
-%\usepackage[autostyle=true]{csquotes} % Required to generate language-dependent quotes in the bibliography
 
 \parindent 0mm
 %----------------------------------------------------------------------------------------
 %	MARGIN SETTINGS
 %----------------------------------------------------------------------------------------
-
 \geometry{
 	paper=a4paper, % Change to letterpaper for US letter
 	inner=4.0cm, % Inner margin
@@ -43,30 +32,9 @@
 	%showframe, % Uncomment to show how the type block is set on the page
 }
 
-%----------------------------------------------------------------------------------------
-%	THESIS INFORMATION
-%----------------------------------------------------------------------------------------
-
-\thesistitle{Measurement of vertical betatron oscillations using the straw tracking detectors for the E989 muon g-2 experiment at Fermilab.} % Your thesis title, this is used in the title and abstract, print it elsewhere with \ttitle
-\supervisor{Prof. Themis \textsc{Bowcock} and Dr. Barry \textsc{King} } % Your supervisor's name, this is used in the title page, print it elsewhere with \supname
-
-%\examiner{} % Your examiner's name, this is not currently used anywhere in the template, print it elsewhere with \examname
-%\degree{Doctor of Philosophy} % Your degree name, this is used in the title page and abstract, print it elsewhere with \degreename
-\author{Tabitha \textsc{Halewood-Leagas}} % Your name, this is used in the title page and abstract, print it elsewhere with \authorname
-%\addresses{} % Your address, this is not currently used anywhere in the template, print it elsewhere with \addressname
-
-%\subject{} % Your subject area, this is not currently used anywhere in the template, print it elsewhere with \subjectname
-%\keywords{} % Keywords for your thesis, this is not currently used anywhere in the template, print it elsewhere with \keywordnames
-%\university{\href{http://www.university.com}{University of Liverpool}} % Your university's name and URL, this is used in the title page and abstract, print it elsewhere with \univname
-%\department{Department of Physics} % Your department's name and URL, this is used in the title page and abstract, print it elsewhere with \deptname
-%\group{High Energy Physics} % Your research group's name and URL, this is used in the title page, print it elsewhere with \groupname
-%\faculty{Faculty Name} % Your faculty's name and URL, this is used in the title page and abstract, print it elsewhere with \facname
-
-\AtBeginDocument{
-\hypersetup{pdftitle=\ttitle} % Set the PDF's title to your title
-\hypersetup{pdfauthor=\authorname} % Set the PDF's author to your name
-\hypersetup{pdfkeywords=\keywordnames} % Set the PDF's keywords to your keywords
-}
+% only give overfull warnings if fiasco bigger than 1.8mm
+\hfuzz=5.0pt  % approx 1.8mm
+\setlength{\headheight}{1.1\baselineskip}
 
 \begin{document}
 
@@ -74,49 +42,44 @@
 
 \pagestyle{plain} % Default to the plain heading style until the thesis style is called for the body content
 
-%----------------------------------------------------------------------------------------
+%------------------------------------------------------
 %	TITLE PAGE
-%----------------------------------------------------------------------------------------
+%------------------------------------------------------
 
 \begin{titlepage}
 \begin{center}
 
 \vspace*{.06\textheight}
-{\scshape\LARGE \univname\par}\vspace{1.5cm} % University name
-%\textsc{\Large Doctoral Thesis}\\[0.5cm] % Thesis type
-
 \HRule \\[0.4cm] % Horizontal line
-{\huge \bfseries \ttitle\par}\vspace{0.4cm} % Thesis title
+{\huge \bfseries Measurement of vertical betatron oscillations using the straw tracking detectors for the E989 muon g-2 experiment at Fermilab. \par}\vspace{0.4cm} % Thesis title
 \HRule \\[1.5cm] % Horizontal line
  
 \begin{minipage}[t]{0.4\textwidth}
 \begin{flushleft} \large
 \emph{Author:}\\
-{\authorname} % Author name 
+Tabitha \textsc{Halewood-Leagas}
 \end{flushleft}
 \end{minipage}
 \begin{minipage}[t]{0.4\textwidth}
 \begin{flushright} \large
 \emph{Supervisors:} \\
-{\supname} % Supervisor name 
+Prof. Themis \textsc{Bowcock} and Dr. Barry \textsc{King} 
 \end{flushright}
 \end{minipage}\\[3cm]
  
 \vfill
 
 \large \textit{Thesis submitted in accordance with the requirements of\\ the University of Liverpool for the degree of Doctor of Philosophy}\\[0.3cm] % University requirement text
-%\textit{in the}\\[0.4cm]
-%\groupname\\\deptname\\[2cm] % Research group name and department name
- 
+
 \vfill
 
-{\large \today}\\[4cm] % Date
-%\includegraphics{Logo} % University/department logo - uncomment to place it
+
+{\large \today}\\[3cm] % Date
+%\includegraphics{Logo} % University/department logo
  
 \vfill
 \end{center}
 \end{titlepage}
-
 
 %----------------------------------------------------------------------------------------
 %	DECLARATION PAGE
@@ -144,66 +107,34 @@
 
 \cleardoublepage
 \fi
-%----------------------------------------------------------------------------------------
-%	QUOTATION PAGE
-%----------------------------------------------------------------------------------------
 
+\newpage
+\addchaptertocentry{Abstract} % Add the abstract to the table of contents
+\begin{center}{\bf\Large Abstract}
+\end{center}
+\input{abstract}
 
-%----------------------------------------------------------------------------------------
-%	ABSTRACT PAGE
-%----------------------------------------------------------------------------------------
-
-\begin{abstract}
-\addchaptertocentry{\abstractname} % Add the abstract to the table of contents
-The measurement of the anomalous magnetic moment of electrons and muons has been an important test of the Standard Model (SM) of particle physics over many decades. This is because it can be measured experimentally and calculated theoretically to a high precision. In particular the anomalous magnetic moment of the muon, $a_{\mu}$, is an ideal candidate for the search of new physics due to the combination of its large mass and relatively long lifetime.
-
-The current world's most precise value of $a_{\mu}$ was measured by the E821 experiment at the Brookhaven National laboratory (BNL). This achieved a precision of 540 ppb and caused great interested by showing a $\sim 3.5\sigma$ deviation from the SM value. This motivated a new experiment: the E989 muon g-2 experiment at the Fermi National Accelerator Laboratory to confirm or reject the current discrepancy. This experiment aims to gather a data sample 21 times larger than the BNL experiment and to improve the determination of the systematic certainties by a factor of three to achieve a fourfold increase in precision to 140 ppb. With this improvement in precision, and if the $a_{\mu}$ value remains unchanged, it would establish evidence for previously unknown physical interactions by giving a $\sim$ 7$\sigma$ discrepancy between the experimental measurement and the SM calculation.
-
-The Fermilab experiment is based on the BNL experiment and reuses the experiment’s storage ring magnet. Improved experimental equipment has also been introduced to reduce the systematic uncertainty on the $a_{\mu}$ measurement. One such improvement is the addition of two straw tracking stations which measure the trajectory of the positrons emitted from the (positive) muon decays and allow a detailed study of the spatial and temporal motion of the beam to be undertaken along with critical cross-checks of the the calorimeter data.
-
-This thesis describes in detail the design, construction and testing of the tracking detectors which were built at the University of Liverpool. A detailed study of the vertical motion of the beam is also presented. The study provides an important correction that must be applied to the data before $a_\mu$  can be determined. 
-
-\end{abstract}
-
-%----------------------------------------------------------------------------------------
+%------------------------------------------
 %	ACKNOWLEDGEMENTS
-%----------------------------------------------------------------------------------------
+%------------------------------------------
 
-\begin{acknowledgements}
-\addchaptertocentry{\acknowledgementname} % Add the acknowledgements to the table of contents
-
-\end{acknowledgements}
+\newpage
+\addchaptertocentry{Acknowledgements} % Add the acknowledgements to the table of contents
+\begin{center}{\bf\Large Acknowledgements}
+\end{center}
+\input{acknowledgements}
 
 %----------------------------------------------------------------------------------------
 %	LIST OF CONTENTS/FIGURES/TABLES PAGES
 %----------------------------------------------------------------------------------------
 
 \tableofcontents % Prints the main table of contents
-
 \listoffigures % Prints the list of figures
-
 \listoftables % Prints the list of tables
 
 %----------------------------------------------------------------------------------------
 %	ABBREVIATIONS
 %----------------------------------------------------------------------------------------
-
-
-%----------------------------------------------------------------------------------------
-%	PHYSICAL CONSTANTS/OTHER DEFINITIONS
-%----------------------------------------------------------------------------------------
-
-
-%----------------------------------------------------------------------------------------
-%	SYMBOLS
-%----------------------------------------------------------------------------------------
-
-
-%----------------------------------------------------------------------------------------
-%	DEDICATION
-%----------------------------------------------------------------------------------------
-
-%\dedicatory{For/Dedicated to/To my\ldots} 
 
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - CHAPTERS
@@ -213,8 +144,6 @@ This thesis describes in detail the design, construction and testing of the trac
 
 \pagestyle{thesis} % Return the page headers back to the "thesis" style
 
-% Include the chapters of the thesis as separate files from the Chapters folder
-% Uncomment the lines as you write the chapters
 \include{Chapters/Introduction}
 \include{Chapters/Chapter1}
 \include{Chapters/Chapter2} 
@@ -224,26 +153,17 @@ This thesis describes in detail the design, construction and testing of the trac
 \include{Chapters/Chapter6} 
 \include{Chapters/Chapter7} 
  
-
-
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - APPENDICES
 %----------------------------------------------------------------------------------------
 
 \appendix % Cue to tell LaTeX that the following "chapters" are Appendices
 
-% Include the appendices of the thesis as separate files from the Appendices folder
-% Uncomment the lines as you write the Appendices
-
 %\include{Appendices/AppendixA}
-%\include{Appendices/AppendixB}
-%\include{Appendices/AppendixC}
 
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
 %----------------------------------------------------------------------------------------
-
-\printbibliography[heading=bibintoc]
+\printbibliography
 %----------------------------------------------------------------------------------------
-
 \end{document}  
